src/objects/Student__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <length>5</length>
    <type>Text</type>
</CustomField>