src/objects/Student__c/fields/Fathers_Name__c.field-meta.xml
<CustomField>
    <fullName>Fathers_Name__c</fullName>
    <label>Fathers Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>