src/objects/Student__c/fields/Fees_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Fees_Submitted__c</fullName>
    <label>Fees Submitted</label>
    <type>DateTime</type>
</CustomField>