src/objects/Student__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <label>IFSC Code</label>
    <type>TextArea</type>
</CustomField>