src/objects/Student__c/fields/Pending_Exam_Fees__c.field-meta.xml
<CustomField>
    <fullName>Pending_Exam_Fees__c</fullName>
    <label>Pending Exam Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>