src/objects/Student__c/fields/Pendng_Fees_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pendng_Fees_Amount__c</fullName>
    <label>Pendng Fees Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>