src/objects/Student__c/fields/Subjects_In_which_back__c.field-meta.xml
<CustomField>
    <fullName>Subjects_In_which_back__c</fullName>
    <label>Subjects In which back</label>
    <length>10</length>
    <type>Text</type>
</CustomField>